--- a/HRS.html
+++ b/HRS.html
@@ -117,13 +117,13 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">HRS</h2>
+        <h2 class="title-line-left text-white">Kỹ năng Hou-Ren-Sou</h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">HRS</li>
+            <li class="text-blue">Kỹ năng Hou-Ren-Sou</li>
           </ul>
         </div>
       </div>
@@ -149,14 +149,14 @@
 
                 <ol>
                   <li>
-                    1. Nhận thức rõ tầm quan trọng của Hou-ren-sou trong giao
+                    1. Nhận thức rõ tầm quan trọng của Hou-ren-sou trong<br> &nbsp; &nbsp;giao
                     tiếp hàng ngày
                   </li>
                   <li>
-                    2. Nắm các phương pháp, kỹ năng để Hou-ren-sou hiệu quả
+                    2. Nắm các phương pháp, kỹ năng để Hou-ren-sou<br> &nbsp; &nbsp;hiệu quả
                   </li>
                   <li>
-                    3. Vận dụng Hou-ren-sou trong những tình huống cụ thể hàng
+                    3. Vận dụng Hou-ren-sou trong những tình huống cụ thể<br> &nbsp; &nbsp;hàng
                     ngày
                   </li>
                 </ol>
@@ -167,16 +167,14 @@
                 <ol>
                   <li>1. Toàn thể Nhân viên, cấp quản lý, lãnh đạo</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn hiểu thêm tầm quan trọng về
-                    tính tuân thủ trong Doanh nghiệp
+                    2. Anh/Chị quan tâm, mong muốn hiểu thêm kỹ năng<br> &nbsp; &nbsp;Hou-Ren-Sou
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -251,8 +249,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title">
-                  <span>Chương 1: </span>Định nghĩa và tầm quan trọng
+                <h4 class="title text-blue">
+                  <span class='text-blue'>Phần 1: </span>Định nghĩa và tầm quan trọng
                 </h4>
                 <ol>
                   <li>1. Định nghĩa</li>
@@ -262,8 +260,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Chương 2:</span> Để ứng dụng HRS hiệu quả
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần 2:</span> Để ứng dụng Hou-Ren-Sou hiệu quả
                 </h4>
 
                 <h5>I. Kiến thức cơ bản</h5>
@@ -273,30 +271,32 @@
                   <li>3. Mức độ khẩn cấp và quan trọng của HRS</li>
                   <li>4. Phương thức SMART</li>
                   <li>
-                    5. Đồng cảm, đặt mình vào vị trí người nghe, thấu hiểu kỳ
+                    5. Đồng cảm, đặt mình vào vị trí người nghe, thấu hiểu<br> &nbsp; &nbsp;kỳ
                     vọng của người nghe
                   </li>
                 </ol>
-                <h5>II. Các nguyên tắc để HOU-REN-SOU hiệu quả</h5>
+                <br>
+                <h5>II. Các nguyên tắc để Hou-Ren-Sou hiệu quả</h5>
                 <ol>
                   <li>1. 4 Luôn</li>
                   <li>2. 4 Đúng</li>
                   <li>3. 4 Khi</li>
                   <li>4. 4 Không</li>
                   <li>5. Lắng nghe</li>
-                  <li>6. PDCA khi HRS</li>
+                  <li>6. Ứng dụng PDCA trong Hou-Ren-Sou</li>
                 </ol>
-                <h5>III. Phương pháp HOU-REN-SOU trong công việc</h5>
+                <br>
+                <h5>III. Phương pháp Hou-Ren-Sou trong công việc</h5>
                 <ol>
-                  <li>1. Mẫu HOU-REN-SOU khi có sự cố xảy ra</li>
+                  <li>1. Mẫu Hou-Ren-Sou khi có sự cố xảy ra</li>
                   <li>2. Phương pháp P.R.E.P</li>
                   <li>3. Phương pháp TT-NG-GP</li>
-                  <li>4. Sổ tay memo HRS</li>
+                  <li>4. Sổ tay memo Hou-Ren-Sou</li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Chương 3: </span>Những lưu ý khi HRS với cấp trên
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần 3: </span>Những lưu ý khi Hou-Ren-Sou với cấp trên
                 </h4>
                 <ol>
                   <li>
