--- a/PDCA.html
+++ b/PDCA.html
@@ -137,13 +137,13 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">PDCA</h2>
+        <h2 class="title-line-left text-white">Ứng dụng chu trình PDCA</h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">PDCA</li>
+            <li class="text-blue">Ứng dụng chu trình PDCA</li>
           </ul>
         </div>
       </div>
@@ -168,13 +168,13 @@
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1.Hệ thống hoá chu trình PDCA</li>
+                  <li>1. Hệ thống hoá chu trình PDCA</li>
                   <li>
-                    2.Hệ thống hóa các kiến thức, kỹ năng cơ bản khi thực hiện
+                    2. Hệ thống hóa các kiến thức, kỹ năng cơ bản khi<br> &nbsp; &nbsp;thực hiện
                     chu trình PDCA
                   </li>
                   <li>
-                    3.Ứng dụng chu trình PDCA & cải tiến công việc hàng ngày
+                    3. Ứng dụng chu trình PDCA & cải tiến công việc <br> &nbsp; &nbsp;hàng ngày
                   </li>
                 </ol>
               </div>
@@ -184,17 +184,14 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, kiến
+                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng,<br> &nbsp; &nbsp;kiến
                     thức về PDCA
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
-                <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
-                </p>
+                <p>Thông báo sau.</p>
               </div>
               <div class="overview-info-item">
                 <a
@@ -251,7 +248,6 @@
                 <div class="history-cert-img">
                   <img src="assets/img/PDCA-4.jpg" alt="img" />
                   <img src="assets/img/PDCA-5.jpg" alt="img" />
-
                 </div>
                 <div class="history-cert-img">
                   <img src="assets/img/PDCA-6.jpg" alt="img" />
@@ -262,7 +258,9 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần 1:</span> Khái quát về PDCA</h4>
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần I:</span> Khái quát về PDCA
+                </h4>
                 <ol>
                   <li>1. PDCA là gì?</li>
                   <li>
@@ -275,8 +273,9 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần 2:</span> Để thực hiện PDCA hiệu quả và triệt để
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần II:</span> Để thực hiện PDCA hiệu
+                  quả và triệt để
                 </h4>
                 <h5>2.1. PLAN: Xác định rõ mục tiêu, lập kế hoạch thực hiện</h5>
                 <ol>
@@ -284,7 +283,7 @@
                   <li>• Lập kế hoạch 7W3H, biểu đồ GANTT</li>
                   <li>• Những điểm cần lưu ý để lập 1 kế hoạch khả thi</li>
                 </ol>
-
+                <br />
                 <h5>2.2. DO: Tiến hành công việc hàng ngày hiệu quả</h5>
                 <ol>
                   <li>• Lập và quản lý to-do-list</li>
@@ -295,11 +294,10 @@
                     • Những kỹ năng thiết yếu để thực hiện công việc hiệu quả
                   </li>
                   <li>
-                    • Phát huy tinh thần lãnh đạo (leadership), tạo động lực cho
-                    Nhân viên
+                    • Phát huy tinh thần team-work, kết nối các phòng ban,<br> &nbsp; &nbsp;hướng đến mục tiêu chung
                   </li>
                 </ol>
-
+                <br />
                 <h5>2.3. CHECK: Kiểm tra tiến độ và chuẩn bị bước tiếp theo</h5>
                 <ol>
                   <li>• Tầm quan trọng của kiểm tra</li>
@@ -307,7 +305,7 @@
                   <li>• Lập check-list</li>
                   <li>• Những điểm lưu ý khi kiểm tra</li>
                 </ol>
-
+                <br />
                 <h5>2.4. ACT: Cải tiến để hoàn thành mục tiêu</h5>
                 <ol>
                   <li>• Tầm quan trọng của cải tiến</li>
