--- a/basicWorkingSkills.html
+++ b/basicWorkingSkills.html
@@ -79,15 +79,35 @@
               <nav class="nav-menu">
                 <ul class="nav-list">
                   <li>
-                    <a href="index.html" class='text-center'>Trang chủ</a>
+                    <a href="index.html" class="text-center">Trang chủ</a>
                   </li>
-                  <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
-                  <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
-                  <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
-                  <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
-                  <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
-                  <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
-                
+                  <li>
+                    <a href="index.html#trainingHouse" class="text-center"
+                      >Đào tạo Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="seminor.html" class="text-center">Hội thảo</a>
+                  </li>
+                  <li>
+                    <a href="educationBusiness.html" class="text-center"
+                      >Tư vấn Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html" class="text-center">Tư vấn CSKH </a>
+                  </li>
+                  <li>
+                    <a href="XTTM.html" class="text-center"
+                      >Xúc tiến Thương mại</a
+                    >
+                  </li>
+                  <li>
+                    <a href="TVTD.html" class="text-center w-110"
+                      >Tư vấn tuyển dụng</a
+                    >
+                  </li>
+
                   <li><a href="contacts.html">Liên hệ</a></li>
                 </ul>
               </nav>
@@ -117,13 +137,13 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Kỹ năng làm việc cơ bản</h2>
+        <h2 class="title-line-left text-white">Kỹ năng làm việc hiệu quả</h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">Basic working skills</li>
+            <li class="text-blue">Kỹ năng làm việc hiệu quả</li>
           </ul>
         </div>
       </div>
@@ -136,10 +156,7 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
-                 NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP & KỸ NĂNG LÀM
-                VIỆC CƠ BẢN
-              </h2>
+              <h2 class="title-line-left">KỸ NĂNG LÀM VIỆC HIỆU QUẢ</h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
                 <p>1-2 ngày</p>
@@ -153,19 +170,12 @@
                   <li>
                     2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
                   </li>
+
                   <li>
-                    3. Hiểu rõ tính tuân thủ trong DN Nhật chính là ngăn ngừa
-                    các hành vi bất chính
+                    3. Hệ thống hóa các kỹ năng làm việc cơ bản cần có của 
+                    <br> &nbsp; &nbsp;1 Nhân viên làm việc chuyên nghiệp
                   </li>
-                  <li>
-                    4. Hệ thống hoá kiến thức, kỹ năng cơ bản của tác phong làm
-                    việc chuyện nghiệp
-                  </li>
-                  <li>
-                    5. Hệ thống hóa các kỹ năng làm việc cơ bản cần có của 1
-                    Nhân viên làm việc chuyên nghiệp
-                  </li>
-                  <li>6. Giúp ngày càng nâng cao chất lượng công việc</li>
+                  <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
                 </ol>
               </div>
 
@@ -174,26 +184,23 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, kiến
-                    thức về tác phong làm việc chuyên nghiệp và kỹ năng làm việc
+                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, <br> &nbsp; &nbsp;kiến
+                    thức về tác phong làm việc chuyên nghiệp và<br> &nbsp; &nbsp;kỹ năng làm việc
                     cơ bản
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
-                <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
-                </p>
+                <p>Thông báo sau.</p>
               </div>
               <div class="overview-info-item">
                 <a
-                data-fancybox
-                href="./assets/img/QR-demo.png"
-                class="register-btn register-QR"
-                >Đăng ký tham gia</a
-              >
+                  data-fancybox
+                  href="./assets/img/QR-demo.png"
+                  class="register-btn register-QR"
+                  >Đăng ký tham gia</a
+                >
               </div>
             </div>
           </div>
@@ -259,93 +266,36 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần I: </span>DẪN NHẬP
+                </h4>
                 <ol>
                   <li>1. Hiểu về tổ chức</li>
                   <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
                   <li>
-                    3. Để làm việc hiệu quả tại DN Nhật Bản, tác phong, kỹ năng
-                    cơ bản cần có
+                    3. Để làm việc hiệu quả tại DN Nhật Bản, A.S.K <br> &nbsp; &nbsp;
+                    (Thái độ - Kỹ năng - Kiến thức) cần có.
                   </li>
                 </ol>
               </div>
 
               <div class="history-info">
-                <h4 class="title uppercase">
-                  <span>Phần II: </span>Nâng cao kỹ năng làm việc cơ bản
+                <h4 class="title uppercase text-blue">
+                  <span class="text-blue">Phần II: </span>Nâng cao kỹ năng làm
+                  việc cơ bản
                 </h4>
                 <h5 class="">
                   Chương 1: Chân dung của 1 Nhân viên chuyên nghiệp
                 </h5>
-                <h5 class="">Chương 2: Tác phong cơ bản</h5>
-                <ol>
-                  <li>1. Chào hỏi</li>
-                  <li>2. Cảm ơn</li>
-                  <li>3 Xin lỗi</li>
-                  <li>4. Thái độ làm việc</li>
-                  <li>5. Trang phục</li>
-                  <li>6. Giao tiếp trong công việc</li>
-
-                  <li>7. Công tư phân minh</li>
-                </ol>
-                <h5 class="">Chương 3. Tác phong trong công việc</h5>
-                <ol>
-                  <li>1. Giờ giấc làm việc, cuộc họp</li>
-                  <li>2. Giao tiếp qua điện thoại</li>
-                  <li>3. Giao tiếp qua Email</li>
-                </ol>
-                <h5 class="">Chương 4: Tính tuân thủ trong DN Nhật</h5>
-                <ol>
-                  <li>1. Tính tuân thủ là gì?</li>
-                  <li>2. Tầm quan trọng của việc tuân thủ</li>
-                  <li>
-                    3. Ba nhóm hành vi bị xem là bất chính trong DN Nhật Bản
-                  </li>
-                  <li>4. Quản lý rủi ro về việc tuân thủ</li>
-                  <li>5. Xử lý trường hợp không tuân thủ</li>
-                  <li>6. Trách nhiệm & nghĩa vụ của Nhân viên</li>
-                </ol>
+                <br />
                 <h5 class="">
-                  Chương 5: Những kỹ năng, kiến thức cơ bản 1 Nhân viên chuyên
-                  nghiệp cần có
+                  Chương 2: Những kỹ năng, kiến thức cơ bản 1 <br />
+                  Nhân viên chuyên nghiệp cần có
                 </h5>
                 <ol>
                   <li>
-                    <h6>I. Kỹ năng Hou-ren-sou</h6>
-                    <ol>
-                      <li>
-                        1. Định nghĩa và tầm quan trọng
-                        <ul>
-                          <li>a) Định nghĩa</li>
-                          <li>b) Tầm quan trọng</li>
-                        </ul>
-                      </li>
-                      <li>
-                        2. Các nguyên tắc để HOU-REN-SOU hiệu quả
-                        <ul>
-                          <li>a) 4 Khi</li>
-                          <li>b) 4 Luôn</li>
-                          <li>c) 4 Đúng</li>
-                          <li>d) 5W1H & 7W3H</li>
-                        </ul>
-                      </li>
-                      <li>
-                        3. Phương pháp HOU-REN-SOU trong công việc
-                        <ul>
-                          <li>a) Mẫu HOU-REN-SOU</li>
-                          <li>b) Phương pháp TT-NG-GP</li>
-                        </ul>
-                      </li>
-                      <li>
-                        4. Ứng dụng phương pháp HOU-REN-SOU trong công việc
-                      </li>
-                      <li>5. “Nên” và “Không nên” trong HOU-REN-SOU</li>
-                    </ol>
-                  </li>
-                  <li>
                     <h6>
-                      II. Personal Balanced Scorecard (Thẻ điểm cân bằng cá
-                      nhân)
+                      I. Personal Balanced Scorecard (Thẻ điểm cân bằng cá nhân)
                     </h6>
                     <ul>
                       <li>1. Định nghĩa</li>
@@ -353,9 +303,10 @@
                       <li>3. 8 bước thực hiện</li>
                     </ul>
                   </li>
+                  <br>
                   <li>
                     <h6>
-                      III. Ứng dụng chu trình PDCA vào trong công việc hàng ngày
+                      II. Ứng dụng chu trình PDCA vào trong công việc hàng ngày
                       & quản lý thời gian hiệu quả
                     </h6>
                     <ul>
@@ -366,13 +317,60 @@
                       </li>
                     </ul>
                   </li>
+                  <br>
+                  <li>
+                    <h6>III. Kỹ năng Hou-ren-sou</h6>
+                    <ol>
+                      <li>
+                        <span class="text-red"
+                          >1. Định nghĩa và tầm quan trọng</span
+                        >
+                        <ul>
+                          <li>a) Định nghĩa</li>
+                          <li>b) Tầm quan trọng</li>
+                        </ul>
+                      </li>
+                      <li>
+                        <span class="text-red"
+                          >2. Các nguyên tắc để HOU-REN-SOU hiệu quả</span
+                        >
+                        <ul>
+                          <li>a) 4 Khi</li>
+                          <li>b) 4 Luôn</li>
+                          <li>c) 4 Đúng</li>
+                          <li>d) 5W1H & 7W3H</li>
+                        </ul>
+                      </li>
+                      <li>
+                        <span class="text-red"
+                          >3. Phương pháp HOU-REN-SOU trong công việc</span
+                        >
+                        <ul>
+                          <li>a) Mẫu HOU-REN-SOU</li>
+                          <li>b) Phương pháp TT-NG-GP</li>
+                        </ul>
+                      </li>
+                      <li>
+                        <span class="text-red"
+                          >4. Ứng dụng phương pháp HOU-REN-SOU trong công
+                          việc</span
+                        >
+                      </li>
+                      <li>
+                        <span class="text-red"
+                          >5. “Nên” và “Không nên” trong HOU-REN-SOU</span
+                        >
+                      </li>
+                    </ol>
+                  </li>
+                  <br>
                   <li>
                     <h6>
                       IV. Phát huy tinh thần team-work, đạt mục tiêu chung
                     </h6>
                     <ul>
                       <li>1. Giữ chữ “Hòa”</li>
-                      <li>2. Trách nhiệm mỗi cá nhân "</li>
+                      <li>2. Trách nhiệm mỗi cá nhân </li>
                     </ul>
                   </li>
                 </ol>
@@ -385,7 +383,7 @@
     <!--================= OUR-HISTORY END =================-->
 
     <!--================= S-TESTIMONIALS =================-->
-   
+
     <!--=============== S-TESTIMONIALS END ===============-->
 
     <!--===================== FOOTER =====================-->
@@ -520,9 +518,11 @@
             </div>
             <div class="col-8">
               <ul class="footer-menu">
-                <li><a href="seminor.html" >Hội thảo</a></li>
-                <li><a href="educationBusiness.html">Tư vấn  Doanh Nghiệp</a></li>
-                <li><a href="CSKH.html" >Tư vấn CSKH </a></li>
+                <li><a href="seminor.html">Hội thảo</a></li>
+                <li>
+                  <a href="educationBusiness.html">Tư vấn Doanh Nghiệp</a>
+                </li>
+                <li><a href="CSKH.html">Tư vấn CSKH </a></li>
                 <li><a href="XTTM.html">Xúc tiến Thương mại</a></li>
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
