--- a/communicationSkill.html
+++ b/communicationSkill.html
@@ -123,7 +123,7 @@
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">Communication skill</li>
+            <li class="text-blue">Kỹ năng giao tiếp hiệu quả</li>
           </ul>
         </div>
       </div>
@@ -137,11 +137,11 @@
           <div class="col-12 col-md-6">
             <div class="overview-info">
               <h2 class="title-line-left">
-                NÂNG CAO KỸ NĂNG GIAO TIẾP HIỆU QUẢ
+                KỸ NĂNG GIAO TIẾP HIỆU QUẢ
               </h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
-                <p>2 ngày</p>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
@@ -150,7 +150,7 @@
                 <ol>
                   <li>
                     1. Hiểu được tầm quan trọng của giao tiếp, nhằm thấu hiểu
-                    đối phương
+                    <br> &nbsp; &nbsp; đối phương
                   </li>
                   <li>2. Hiểu rõ kiểu giao tiếp Hou-ren-sou trong DN Nhật</li>
                   <li>3. Nắm được các nguyên tắc, kỹ thuật trong giao tiếp</li>
@@ -165,16 +165,15 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, kiến
-                    thức giao tiếp thấu cảm
+                    2. Anh/Chị quan tâm, mong muốn học hỏi kiến
+                    thức,<br> &nbsp; &nbsp; kỹ năng giao tiếp hiệu quả
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -251,8 +250,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title">
-                  <span>Chương 1: </span>Tầm quan trọng của giao tiếp
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần 1: </span>Tầm quan trọng của giao tiếp
                 </h4>
                 <ol>
                   <li>1. Giao tiếp là gì?</li>
@@ -265,32 +264,66 @@
                   <li>8. 3 nguyên nhân chính gây thất bại trong giao tiếp</li>
                   <li>
                     9. Những tình huống giao tiếp, quản lý thất bại hay gặp phải
-                    (Tham khảo)
+                    <br> &nbsp; &nbsp; (Tham khảo)
                   </li>
                   <li>10. Vai trò & trách nhiệm của từng thành viên</li>
                 </ol>
               </div>
 
               <div class="history-info">
-                <h4 class="title uppercase">
-                  <span>Chương 2:</span> Để nâng cao kỹ năng giao tiếp hiệu quả 
+                <h4 class="title text-blue ">
+                  <span class='text-blue'>Phần 2:</span> Để nâng cao kỹ năng giao tiếp hiệu quả 
                 </h4>
                 <ol>
-                  <li>I. Thấu hiểu lẫn nhau trước khi giao tiếp: Tính cách, năng lực, mong đợi, khuynh hướng giao tiếp, chuẩn bị sẳn nội dung </li>
-                  <li>II. Công cụ cơ bản: SMART, 7W3H, 4 Đúng, 4-Không, 4-Khi, cửa sổ Johari </li>
-                  <li>III. Nguyên tắc cơ bản: FAST </li>
-                  <li>IV. Kỹ năng & kỹ thuật cần có: 
+                  <li>
+                    <span class="text-red">I. Thấu hiểu lẫn nhau trước khi giao tiếp</span>
                     <ol>
-                      <li>- Kỹ năng: Giao tiếp phi ngôn từ 7-38-55, lắng nghe thấu cảm, lắng nghe tích cực </li>
-                      <li>- Kỹ thuật phản hồi: S.T.A.R, K.A.S, S-G.R.O.W, kỹ thuật đặt câu hỏi </li>
+                      <li>1. Tính cách</li>
+                      <li>2. Năng lực</li>
+                      <li>3. Mong đợi</li>
+                      <li>4. Khuynh hướng giao tiếp</li>
+                      <li>5. Chuẩn bị sẳn nội dung</li>
                     </ol>
                   </li>
-                  <li>V. Nguyên tắc vàng dành cho cấp trên & cấp dưới </li>
+                  <br>
+                  <li><span class="text-red">II. Công cụ cơ bản </span>
+                    <ol>
+                      <li>1. SMART</li>
+                      <li>2. 7W3H</li>
+                      <li>3. 4 Đúng</li>
+                      <li>4. 4-Không</li>
+                      <li>5. 4-Khi</li>
+                      <li>6. cửa sổ Johari</li>
+                    </ol>
+                  </li>
+                  <br>
+                  <li><span class="text-red">III. Nguyên tắc FAST </span></li>
+                  <br>
+                  <li><span class="text-red">IV. Kỹ năng & kỹ thuật cần có</span>
+                    <ol>
+                      <li>1. Kỹ năng
+                        <ol>
+                          <li>- Giao tiếp phi ngôn từ 7-38-55</li>
+                          <li>- Lắng nghe thấu cảm</li>
+                          <li>- Lắng nghe tích cực</li>
+                        </ol>  
+                      </li>
+                      <li>2. Kỹ thuật phản hồi
+                        <ol>
+                          <li>- S.T.A.R</li>
+                          <li>- K.A.S</li>
+                          <li>- S-G.R.O.W</li>
+                          <li>- Kỹ thuật đặt câu hỏi </li>
+                        </ol>
+                      </li>
+                    </ol>
+                  </li>
+                  <li><span class="text-red">V. Nguyên tắc vàng dành cho cấp trên & cấp dưới </span></li>
               </div>
 
               <div class="history-info">
-                <h4 class="title uppercase">
-                  <span>Chương 3: </span> Ứng dụng kỹ năng giao tiếp trong công việc hàng ngày 
+                <h4 class="title text-blue ">
+                  <span class='text-blue'>Phần 3: </span> Ứng dụng kỹ năng giao tiếp trong công việc hàng ngày 
                 </h4>
                 <ol>
                   <li>I. Lập kế hoạch, triển khai công việc mới </li>
