--- a/compliance.html
+++ b/compliance.html
@@ -118,14 +118,14 @@
     >
       <div class="container">
         <h2 class="title-line-left text-white">
-          Tính tuân thủ các quy định công ty
+          Tính tuân thủ trong Doanh nghiệp
         </h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">Compliance</li>
+            <li class="text-blue">Tính tuân thủ</li>
           </ul>
         </div>
       </div>
@@ -152,8 +152,8 @@
                 <ol>
                   <li>1. Hiểu tầm quan trọng của việc tuân thủ</li>
                   <li>
-                    2. Hiểu rõ các hành vi bị xem là bất chính trong Doanh
-                    nghiệp
+                    2. Hiểu rõ các hành vi bị xem là bất chính trong 
+                    <br> &nbsp; &nbsp; Doanh nghiệp
                   </li>
                   <li>
                     3. Vận dụng các biện pháp khi xảy ra các trường hợp không
@@ -167,7 +167,7 @@
                 <ol>
                   <li>1. Toàn thể Nhân viên, cấp quản lý, lãnh đạo</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn hiểu thêm tầm quan trọng về
+                    2. Anh/Chị quan tâm, mong muốn hiểu thêm tầm <br> &nbsp; &nbsp; quan trọng về
                     tính tuân thủ trong Doanh nghiệp
                   </li>
                 </ol>
@@ -175,8 +175,7 @@
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
