--- a/delegationSkill.html
+++ b/delegationSkill.html
@@ -79,15 +79,35 @@
               <nav class="nav-menu">
                 <ul class="nav-list">
                   <li>
-                    <a href="index.html" class='text-center'>Trang chủ</a>
+                    <a href="index.html" class="text-center">Trang chủ</a>
                   </li>
-                  <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
-                  <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
-                  <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
-                  <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
-                  <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
-                  <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
-                
+                  <li>
+                    <a href="index.html#trainingHouse" class="text-center"
+                      >Đào tạo Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="seminor.html" class="text-center">Hội thảo</a>
+                  </li>
+                  <li>
+                    <a href="educationBusiness.html" class="text-center"
+                      >Tư vấn Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html" class="text-center">Tư vấn CSKH </a>
+                  </li>
+                  <li>
+                    <a href="XTTM.html" class="text-center"
+                      >Xúc tiến Thương mại</a
+                    >
+                  </li>
+                  <li>
+                    <a href="TVTD.html" class="text-center w-110"
+                      >Tư vấn tuyển dụng</a
+                    >
+                  </li>
+
                   <li><a href="contacts.html">Liên hệ</a></li>
                 </ul>
               </nav>
@@ -117,7 +137,7 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white"> Kỹ năng phân công phân nhiệm</h2>
+        <h2 class="title-line-left text-white">Kỹ năng phân công phân nhiệm</h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
@@ -137,8 +157,7 @@
           <div class="col-12 col-md-6">
             <div class="overview-info">
               <h2 class="title-line-left">
-                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH
-                NGHIỆP NHẬT
+                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
               </h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
@@ -149,34 +168,29 @@
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Hiểu rõ hơn về văn hóa doanh nghiệp Nhật Bản</li>
+                  <li>1. Hiểu rõ vai trò & nhiệm vụ của người quản lý</li>
+                  <li>2. Thấu hiểu tầm quan trọng của phân công phân nhiệm</li>
+                  <li>3. Nắm vững 7 bước giao việc hiện quả</li>
                   <li>
-                    2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
+                    4. Giúp Nhân viên hoàn thành công việc được giao,<br> &nbsp; &nbsp; tăng thêm
+                    động lực làm việc
                   </li>
-                  <li>
-                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của tác phong
-                    làm việc chuyên nghiệp
-                  </li>
-                  <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
                 </ol>
               </div>
 
               <div class="overview-info-item">
                 <h5>ĐỐI TƯỢNG:</h5>
                 <ol>
-                  <li>1. Cấp Nhân viên</li>
+                  <li>1. Cấp Quản lý, Leader, Giám sát</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong làm việc
-                    chuyên nghiệp tại DN Nhật
+                    2. Anh/Chị quan tâm, mong muốn học hỏi về<br> &nbsp; &nbsp; kỹ năng quản lý và
+                    lãnh đạo
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
-                <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
-                </p>
+                <p>Thông báo sau.</p>
               </div>
               <div class="overview-info-item">
                 <a
@@ -223,7 +237,8 @@
               <div class="overview-info-item">
                 <h5>Lưu ý:</h5>
                 <p>
-					Nội dung khoá học có thể điều chỉnh một ít, phù hợp với đối tượng tham dự.
+                  Nội dung khoá học có thể điều chỉnh một ít, phù hợp với đối
+                  tượng tham dự.
                 </p>
               </div>
               <div class="history-cert">
@@ -249,71 +264,83 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần I: </span>Chân dung của nhà quản
+                  lý chuyên nghiệp, giúp cấp dưới hoàn thành công việc được giao
+                  & phát triển
+                </h4>
                 <ol>
-                  <li>1. Hiểu về tổ chức</li>
-                  <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
+                  <li>1. Hai nhiệm vụ chính</li>
+                  <li>2. Phân biệt “lãnh đạo” & “quản lý”</li>
+                  <li>3. Yếu tố “3E”của nhà quản lý chuyên nghiệp</li>
+                </ol>
+              </div>
+              <div class="history-info">
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần II:</span> Tầm quan trọng của
+                  phân công phân nhiệm, giúp cấp dưới hoàn thành công việc được
+                  giao
+                </h4>
+                <ol>
+                  <li>1. Lợi ích và tầm quan trọng</li>
+                  <li>2. Hậu quả nếu phân công phân nhiệm không hiệu quả</li>
+                </ol>
+              </div>
+              <div class="history-info">
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần III: </span>Để phân công phân
+                  nhiệm hiệu quả, giúp cấp dưới hoàn thành công việc được giao &
+                  phát triển
+                </h4>
+                <ol>
                   <li>
-                    3. Đặc trưng cơ bản của doanh nghiệp Nhật/người Nhật và
-                    doanh nghiệp Việt/người Việt
+                    1. Truyền đạt mục tiêu Công ty, bộ phận theo phương thức
+                    A.B.C.D
                   </li>
                   <li>
-                    4. Để làm việc hiệu quả tại doanh nghiệp Nhật Bản, tác
-                    phong/kỹ năng cơ bản cần lưu ý
+                    2. Thấu hiểu Nhân viên
+                    <ol>
+                      <li>- A.S.K</li>
+                      <li>- Ma trận năng lực</li>
+                    </ol>
+                  </li>
+                  <li>
+                    3. 7 bước giao việc hiệu quả
+                    <ol>
+                      <li>B1: Chọn việc để giao</li>
+                      <li>B2: Chọn người để giao</li>
+                      <li>
+                        B3: Giao đúng người - đúng việc - đúng thời điểm
+                        <ol>
+                          <li>- PDCA</li>
+                          <li>
+                            - Kết hợp với kế hoạch giao việc theo biểu đồ GANTT
+                          </li>
+                        </ol>
+                      </li>
+                      <li>
+                        B4: Giao việc, phải đi kèm với Đào tạo & huấn luyện
+                        <ol>
+                          <li>- Phân biện Đào tạo & huấn luyện</li>
+                          <li>- 3 phương pháp đào tạo & huấn luyện cơ bản</li>
+                        </ol>
+                      </li>
+                      <li>
+                        B5: Giao việc, phải đi kèm giám sát, kiểm tra, hỗ trợ
+                        kịp thời
+                      </li>
+                      <li>B6: Tiếp nhận kết quả, đánh giá</li>
+                      <li>B7: Khen ngợi, tạo động lực cho NV</li>
+                    </ol>
                   </li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần II:</span> Để nâng cao tác phong làm việc chuyên
-                  nghiệp cơ bản tại doanh nghiệp Nhật
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần IV: </span>Những điều cần tránh
+                  khi giao việc cho Nhân viên cấp dưới
                 </h4>
-                <ol>
-                  <li>
-                    1. Tác phong cơ bản khi chào hỏi - Trang phục
-                    <ul>
-                      <li>
-                        - Chào hỏi (thái độ, âm lượng, giọng nói) trong nội bộ,
-                        với khách hàng
-                      </li>
-                      <li>- Trao danh thiếp</li>
-                      <li>- Vị trí ngồi trong phòng họp</li>
-                      <li>- Phục vụ trà nước</li>
-                      <li>- Tiễn khách trong thang máy</li>
-                      <li>- Cảm ơn – xin lỗi</li>
-                    </ul>
-                  </li>
-                  <li>
-                    2. Tác phong cơ bản trong khi làm việc
-                    <ul>
-                      <li>- Giữ chữ “Hòa” trong doanh nghiệp Nhật</li>
-                      <li>- Giờ giấc, cuộc hẹn</li>
-                      <li>- Đối ứng qua điện thoại</li>
-                      <li>- Giao tiếp qua email</li>
-                      <li>
-                        - Giao tiếp, gặp gỡ hàng ngày (thái độ, ngôn từ cơ bản):
-                        nên & không nên
-                      </li>
-                      <li>- 5S</li>
-                    </ul>
-                  </li>
-                  <li>
-                    3. Tính tuân thủ trong doanh nghiệp Nhật = Ngăn ngừa các
-                    hành vi bất chính
-                    <ul>
-                      <li>- Tính tuân thủ là gì?</li>
-                      <li>- Tầm quan trọng của việc tuân thủ</li>
-                      <li>
-                        - Ba nhóm hành vi bị xem là bất chính trong DN Nhật Bản
-                      </li>
-                      <li>- Quản lý rủi ro về việc tuân thủ</li>
-                      <li>- Xử lý trường hợp không tuân thủ</li>
-                      <li>-Trách nhiệm & nghĩa vụ của Nhân viên</li>
-                    </ul>
-                  </li>
-                </ol>
               </div>
-              
             </div>
           </div>
         </div>
@@ -323,57 +350,58 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-
-		<div class="container">
-		  <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-		  <!-- <p class="slogan">
+      <div class="container">
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
+        <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
 		  </p> -->
-		  <div class="slider-testimonials">
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-				  Chương trình thực tế ứng dụng cao, có thể áp dụng trong công việc hiện tại
-				</div>
-				<!-- <h4 class="name">Louisa Russell</h4>
+        <div class="slider-testimonials">
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
+                việc hiện tại
+              </div>
+              <!-- <h4 class="name">Louisa Russell</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-				  Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của tôi 
-				</div>
-				<!-- <h4 class="name">Samson Peters</h4>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
+                tôi
+              </div>
+              <!-- <h4 class="name">Samson Peters</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-          Học hỏi và bổ sung nhiều kiến thức cho bản thân.
-				</div>
-				<!-- <h4 class="name">Marry James</h4>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
+              </div>
+              <!-- <h4 class="name">Marry James</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-		  </div>
-		</div>
-	  </section>
-	  <!--=============== S-TESTIMONIALS END ===============-->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--=============== S-TESTIMONIALS END ===============-->
 
     <!--===================== FOOTER =====================-->
     <footer>
@@ -384,11 +412,14 @@
               <img src="assets/img/Logo-footer.png" alt="logo" />
             </a>
             <div class="footer-text">
-				CÔNG TY TNHH TV-TM-DV <br> OMOTENASHI VIỆT-NHẬT
+              CÔNG TY TNHH TV-TM-DV <br />
+              OMOTENASHI VIỆT-NHẬT
             </div>
             <ul class="soc-link">
               <li>
-                <a target="_blank" href="https://www.facebook.com/groups/www.omotenashi.com.vn/"
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/groups/www.omotenashi.com.vn/"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
               </li>
@@ -398,14 +429,14 @@
                   ><i class="fab fa-youtube"></i
                 ></a>
               </li>
-			  <li>
-				<a
-				  target="_blank"
-				  href="mailto:
+              <li>
+                <a
+                  target="_blank"
+                  href="mailto:
 				  thao.nguyen@omotenashi.com.vn"
-				  ><i class="fas fa-envelope"></i
-				></a>
-			  </li>
+                  ><i class="fas fa-envelope"></i
+                ></a>
+              </li>
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
@@ -414,8 +445,9 @@
               <li>
                 <i class="fas fa-map-marker-alt"></i>
                 <a href="contacts.html"
-                  >Office 2, 8th Floor, Office area, Pearl Plaza Building, 561A Dien Bien Phu Street, Ward 25, Binh Thanh District, HCM City </a
-                >
+                  >Office 2, 8th Floor, Office area, Pearl Plaza Building, 561A
+                  Dien Bien Phu Street, Ward 25, Binh Thanh District, HCM City
+                </a>
               </li>
               <li>
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -423,7 +455,9 @@
               </li>
               <li>
                 <i class="fas fa-globe" aria-hidden="true"></i>
-                <a href="https://www.omotenashi.com.vn/" target="_blank">omotenashi.com.vn</a>
+                <a href="https://www.omotenashi.com.vn/" target="_blank"
+                  >omotenashi.com.vn</a
+                >
               </li>
             </ul>
           </div>
@@ -493,15 +527,19 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-				© 2021 Bản quyền thuộc về 
-                <a target="_blank" href="https://www.omotenashi.com.vn/">OMOTENASHI </a>
+                © 2021 Bản quyền thuộc về
+                <a target="_blank" href="https://www.omotenashi.com.vn/"
+                  >OMOTENASHI
+                </a>
               </div>
             </div>
             <div class="col-8">
               <ul class="footer-menu">
-                <li><a href="seminor.html" >Hội thảo</a></li>
-                <li><a href="educationBusiness.html">Tư vấn  Doanh Nghiệp</a></li>
-                <li><a href="CSKH.html" >Tư vấn CSKH </a></li>
+                <li><a href="seminor.html">Hội thảo</a></li>
+                <li>
+                  <a href="educationBusiness.html">Tư vấn Doanh Nghiệp</a>
+                </li>
+                <li><a href="CSKH.html">Tư vấn CSKH </a></li>
                 <li><a href="XTTM.html">Xúc tiến Thương mại</a></li>
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
