--- a/logic.html
+++ b/logic.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <title>Omotenashi</title>
+    <title>Logic - Omotenashi</title>
     <!-- ===================== META ===================== -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -79,15 +79,35 @@
               <nav class="nav-menu">
                 <ul class="nav-list">
                   <li>
-                    <a href="index.html" class='text-center'>Trang chủ</a>
+                    <a href="index.html" class="text-center">Trang chủ</a>
                   </li>
-                  <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
-                  <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
-                  <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
-                  <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
-                  <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
-                  <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
-                
+                  <li>
+                    <a href="index.html#trainingHouse" class="text-center"
+                      >Đào tạo Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="seminor.html" class="text-center">Hội thảo</a>
+                  </li>
+                  <li>
+                    <a href="educationBusiness.html" class="text-center"
+                      >Tư vấn Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html" class="text-center">Tư vấn CSKH </a>
+                  </li>
+                  <li>
+                    <a href="XTTM.html" class="text-center"
+                      >Xúc tiến Thương mại</a
+                    >
+                  </li>
+                  <li>
+                    <a href="TVTD.html" class="text-center w-110"
+                      >Tư vấn tuyển dụng</a
+                    >
+                  </li>
+
                   <li><a href="contacts.html">Liên hệ</a></li>
                 </ul>
               </nav>
@@ -117,15 +137,13 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">
-          Ứng dụng kỹ năng tư duy Logic trong công việc
-        </h2>
+        <h2 class="title-line-left text-white">Tư duy logic</h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue"> Ứng dụng kỹ năng tư duy Logic trong công việc</li>
+            <li class="text-blue">Tư duy logic</li>
           </ul>
         </div>
       </div>
@@ -139,7 +157,8 @@
           <div class="col-12 col-md-6">
             <div class="overview-info">
               <h2 class="title-line-left">
-                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
+                ỨNG DỤNG TƯ DUY LOGIC & PHẢN BIỆN KHI TRÌNH BÀY / BÁO CÁO VỚI
+                CẤP TRÊN
               </h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
@@ -150,15 +169,16 @@
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Hiểu rõ hơn về văn hóa doanh nghiệp Nhật Bản</li>
                   <li>
-                    2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
+                    1. Hiểu được tầm quan trọng của tư duy phản biện &<br> &nbsp; &nbsp; tư duy
+                    logic
                   </li>
+                  <li>2. Hiểu 8 tiêu chuẩn của tư duy phản biện</li>
+                  <li>3. Hiểu được tầm quan trọng của báo cáo, thuyết trình</li>
                   <li>
-                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của tác phong
-                    làm việc chuyên nghiệp
+                    4. Ứng dụng tư duy phản biện & tư duy logic khi<br> &nbsp; &nbsp; thuyết trình
+                    / báo cáo với cấp trên hiệu quả
                   </li>
-                  <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
                 </ol>
               </div>
 
@@ -167,16 +187,14 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong làm việc
-                    chuyên nghiệp tại DN Nhật
+                    2. Anh/Chị quan tâm, mong muốn học hỏi về tư duy logic<br> &nbsp; &nbsp; và phản biện khi trình bày / báo cáo với Cấp trên
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -251,68 +269,45 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
+                <h4 class="title text-blue "><span class='text-blue'>Phần 1: </span>Tư duy phản biện & tư duy logic </h4>
                 <ol>
-                  <li>1. Hiểu về tổ chức</li>
-                  <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
+                  <li> 1.	Tư duy phản biện là gì? Tư duy logic là gì?</li>
+                  <li>2.	8 tiêu chuẩn của tư duy phản biện & tư duy logic </li>
                   <li>
-                    3. Đặc trưng cơ bản của doanh nghiệp Nhật/người Nhật và
-                    doanh nghiệp Việt/người Việt
+                    3.	3 lợi ích của tư duy phản biện & tư duy logic 
                   </li>
                   <li>
-                    4. Để làm việc hiệu quả tại doanh nghiệp Nhật Bản, tác
-                    phong/kỹ năng cơ bản cần lưu ý
+                    4.	Sự khác biệt giữa tư duy phản biện & phản đối
                   </li>
+                  <li>5.	Rào cản tư duy phản biện </li>
+                  <li>6.	Đặc điểm người tư duy phản biện</li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần II:</span> Để nâng cao tác phong làm việc chuyên
-                  nghiệp cơ bản tại doanh nghiệp Nhật
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần 2:</span> Ứng dụng tư duy phản biện &<br> tư duy logic khi thuyết trình / báo cáo với cấp trên 
                 </h4>
                 <ol>
                   <li>
-                    1. Tác phong cơ bản khi chào hỏi - Trang phục
-                    <ul>
-                      <li>
-                        - Chào hỏi (thái độ, âm lượng, giọng nói) trong nội bộ,
-                        với khách hàng
-                      </li>
-                      <li>- Trao danh thiếp</li>
-                      <li>- Vị trí ngồi trong phòng họp</li>
-                      <li>- Phục vụ trà nước</li>
-                      <li>- Tiễn khách trong thang máy</li>
-                      <li>- Cảm ơn – xin lỗi</li>
-                    </ul>
+                    1.	Tầm quan trọng của báo cáo, thuyết trình                     
                   </li>
                   <li>
-                    2. Tác phong cơ bản trong khi làm việc
-                    <ul>
-                      <li>- Giữ chữ “Hòa” trong doanh nghiệp Nhật</li>
-                      <li>- Giờ giấc, cuộc hẹn</li>
-                      <li>- Đối ứng qua điện thoại</li>
-                      <li>- Giao tiếp qua email</li>
-                      <li>
-                        - Giao tiếp, gặp gỡ hàng ngày (thái độ, ngôn từ cơ bản):
-                        nên & không nên
-                      </li>
-                      <li>- 5S</li>
-                    </ul>
+                    2. 2 phương pháp cơ bản
+                    <ol>
+                      <li>- PREP.S</li>
+                      <li>- T.N.G</li>
+                    </ol>
                   </li>
                   <li>
-                    3. Tính tuân thủ trong doanh nghiệp Nhật = Ngăn ngừa các
-                    hành vi bất chính
+                    3. Những nguyên tắc quan trọng trong thuyết trình / báo cáo  
                     <ul>
-                      <li>- Tính tuân thủ là gì?</li>
-                      <li>- Tầm quan trọng của việc tuân thủ</li>
-                      <li>
-                        - Ba nhóm hành vi bị xem là bất chính trong DN Nhật Bản
-                      </li>
-                      <li>- Quản lý rủi ro về việc tuân thủ</li>
-                      <li>- Xử lý trường hợp không tuân thủ</li>
-                      <li>-Trách nhiệm & nghĩa vụ của Nhân viên</li>
+                      <li>- 7-38,55</li>
+                      <li>- Quy trình 3 bước L-T-S</li>
+                      <li>- Lắng nghe tích cực</li>
+                      <li>- Lắng nghe thấu cảm v.v..</li>
                     </ul>
                   </li>
+                  <li>4.	Ứng dụng tư duy phản biện & tư duy logic khi thuyết trình /<br> &nbsp; &nbsp; báo cáo với cấp trên trong từng tình huống cụ thể</li>
                 </ol>
               </div>
             </div>
@@ -509,9 +504,11 @@
             </div>
             <div class="col-8">
               <ul class="footer-menu">
-                <li><a href="seminor.html" >Hội thảo</a></li>
-                <li><a href="educationBusiness.html">Tư vấn  Doanh Nghiệp</a></li>
-                <li><a href="CSKH.html" >Tư vấn CSKH </a></li>
+                <li><a href="seminor.html">Hội thảo</a></li>
+                <li>
+                  <a href="educationBusiness.html">Tư vấn Doanh Nghiệp</a>
+                </li>
+                <li><a href="CSKH.html">Tư vấn CSKH </a></li>
                 <li><a href="XTTM.html">Xúc tiến Thương mại</a></li>
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
