--- a/middleManagamentSkill.html
+++ b/middleManagamentSkill.html
@@ -138,27 +138,28 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
-                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
+              <h2 class="title-line-left uppercase">
+                Nâng cao năng lực quản lý & lãnh đạo, giúp cấp dưới phát triển & hoàn thành mục tiêu
               </h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
+                <p>2-3 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Hiểu rõ hơn về văn hóa doanh nghiệp Nhật Bản</li>
+                  <li>1.	Hiểu được vai trò & trách nhiệm của nhà quản lý</li>
                   <li>
-                    2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
+                    2.	Nhận biết được yếu tố cốt lõi để trở thành người quản lý<br> &nbsp; &nbsp; chuyên nghiệp 
                   </li>
                   <li>
-                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của tác phong
-                    làm việc chuyên nghiệp
+                    3.	Hoàn thiện kỹ năng làm việc với nhân viên, tạo động lực<br> &nbsp; &nbsp; cho nhân viên hăng hái hơn với công việc
+
                   </li>
-                  <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
+                  <li>4.	Nắm được các phương pháp, kỹ thuật đào tạo &<br> &nbsp; &nbsp; huấn luyện Nhân viên hiệu quả
+                  </li>
                 </ol>
               </div>
 
@@ -167,7 +168,7 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong làm việc
+                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong<br> &nbsp; &nbsp; làm việc
                     chuyên nghiệp tại DN Nhật
                   </li>
                 </ol>
@@ -175,8 +176,7 @@
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -251,68 +251,37 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
+                <h4 class="title text-blue"><span class="text-blue">Phần I: </span>Chân dung của người quản lý cấp trung</h4>
                 <ol>
-                  <li>1. Hiểu về tổ chức</li>
-                  <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
+                  <li>1. Vai trò và nhiệm vụ của người quản lý 
+                    </li>
+                  <li>2. Sự khác biệt giữa Leadership và Management </li>
                   <li>
-                    3. Đặc trưng cơ bản của doanh nghiệp Nhật/người Nhật và
-                    doanh nghiệp Việt/người Việt
+                    3. Yếu tố 3E của người Quản lý chuyên nghiệp 
                   </li>
                   <li>
-                    4. Để làm việc hiệu quả tại doanh nghiệp Nhật Bản, tác
-                    phong/kỹ năng cơ bản cần lưu ý
+                    4. A.S.K người Quản lý cần có 
                   </li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần II:</span> Để nâng cao tác phong làm việc chuyên
-                  nghiệp cơ bản tại doanh nghiệp Nhật
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần II:</span> Kỹ năng cần có của người Quản lý chuyên nghiệp 
                 </h4>
                 <ol>
                   <li>
-                    1. Tác phong cơ bản khi chào hỏi - Trang phục
-                    <ul>
-                      <li>
-                        - Chào hỏi (thái độ, âm lượng, giọng nói) trong nội bộ,
-                        với khách hàng
-                      </li>
-                      <li>- Trao danh thiếp</li>
-                      <li>- Vị trí ngồi trong phòng họp</li>
-                      <li>- Phục vụ trà nước</li>
-                      <li>- Tiễn khách trong thang máy</li>
-                      <li>- Cảm ơn – xin lỗi</li>
-                    </ul>
+                    I. Thiết lập mục tiêu SMART
                   </li>
                   <li>
-                    2. Tác phong cơ bản trong khi làm việc
-                    <ul>
-                      <li>- Giữ chữ “Hòa” trong doanh nghiệp Nhật</li>
-                      <li>- Giờ giấc, cuộc hẹn</li>
-                      <li>- Đối ứng qua điện thoại</li>
-                      <li>- Giao tiếp qua email</li>
-                      <li>
-                        - Giao tiếp, gặp gỡ hàng ngày (thái độ, ngôn từ cơ bản):
-                        nên & không nên
-                      </li>
-                      <li>- 5S</li>
-                    </ul>
+                    II. Thấu hiểu Nhân viên
                   </li>
                   <li>
-                    3. Tính tuân thủ trong doanh nghiệp Nhật = Ngăn ngừa các
-                    hành vi bất chính
-                    <ul>
-                      <li>- Tính tuân thủ là gì?</li>
-                      <li>- Tầm quan trọng của việc tuân thủ</li>
-                      <li>
-                        - Ba nhóm hành vi bị xem là bất chính trong DN Nhật Bản
-                      </li>
-                      <li>- Quản lý rủi ro về việc tuân thủ</li>
-                      <li>- Xử lý trường hợp không tuân thủ</li>
-                      <li>-Trách nhiệm & nghĩa vụ của Nhân viên</li>
-                    </ul>
+                    III. Lập kế hoạch, giao việc & giám sát
                   </li>
+                  <li>IV. Giao tiếp tạo động lực </li>
+                  <li>V. Phát huy tinh thần team-work, giữ chữ “Hòa” trong DN Nhật</li>
+                  <li>VI. Kỹ năng giải quyết vấn đề</li>
+                  <li>VII. Đào tạo và huấn luyện Nhân viên, Trainer The Trainers</li>
                 </ol>
               </div>
             </div>
