--- a/timeManagement.html
+++ b/timeManagement.html
@@ -123,7 +123,7 @@
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">Time Management</li>
+            <li class="text-blue">Quản lý thời gian</li>
           </ul>
         </div>
       </div>
@@ -149,24 +149,24 @@
                   <li>1. Hiểu được tầm quan trọng của quản lý thời gian</li>
                   <li>
                     2. Hiểu rõ điểm mạnh, năng lực bản thân và hiểu bản thân
-                    mong muốn điều gì
+                    <br> &nbsp; &nbsp; mong muốn điều gì
                   </li>
                   <li>
                     3. Thấu hiểu kỳ vọng của cấp trên, đặt mình vào vị trí của
-                    cấp trên, từ đó chủ động hơn trong công việc, không cần đợi
+                    <br> &nbsp; &nbsp; cấp trên, từ đó chủ động hơn trong công việc,<br> &nbsp; &nbsp; không cần đợi
                     nhắc mới làm
                   </li>
 
                   <li>
-                    4. Áp dụng các phương pháp quản lý thời gian hiệu quả, nâng
+                    4. Áp dụng các phương pháp quản lý thời gian hiệu quả,<br> &nbsp; &nbsp; nâng
                     cao hiệu suất công việc
                   </li>
                   <li>
-                    5. Thực hành đa dạng, linh hoạt, giúp dễ nhớ bài và dễ áp
+                    5. Thực hành đa dạng, linh hoạt, giúp dễ nhớ bài và<br> &nbsp; &nbsp; dễ áp
                     dụng trong công việc
                   </li>
                   <li>
-                    6. Mong muốn hoàn thành mục tiêu, chủ động thực hiện công
+                    6. Mong muốn hoàn thành mục tiêu, chủ động thực hiện<br> &nbsp; &nbsp; công
                     việc, bằng cả trái tim
                   </li>
                 </ol>
@@ -177,7 +177,7 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, kiến
+                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng,<br> &nbsp; &nbsp; kiến
                     thức về quản lý thời gian hiệu quả
                   </li>
                 </ol>
@@ -185,8 +185,7 @@
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -258,28 +257,28 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần 1: </span> Tầm quan trọng</h4>
+                <h4 class="title text-blue"><span class='text-blue'>Phần 1: </span> Tầm quan trọng</h4>
                 <ol>
                   <li>
-                    1.Quản lý thời gian là gì? Chúng ta có quản lý được thời
+                    1. Quản lý thời gian là gì? Chúng ta có quản lý được<br> &nbsp; &nbsp; thời
                     gian không?
                   </li>
                   <li>
-                    2.Nguyên nhân phổ biến gây ra việc quản lý thời gian không
+                    2. Nguyên nhân phổ biến gây ra việc quản lý thời gian<br> &nbsp; &nbsp; không
                     hiệu quả
                   </li>
-                  <li>3.Tầm quan trọng của việc quản lý thời gian hiệu quả</li>
-                  <li>4.Hậu quả nếu không quản lý thời gian hiệu quả</li>
+                  <li>3. Tầm quan trọng của việc quản lý thời gian hiệu quả</li>
+                  <li>4. Hậu quả nếu không quản lý thời gian hiệu quả</li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần 2:</span>Để quản lý thời gian hiệu quả
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần 2:</span> Để quản lý thời gian hiệu quả
                 </h4>
-                <h5>1. THẤU HIỂU</h5>
+                <h5>I. THẤU HIỂU</h5>
                 <ol>
                   <li>
-                    <h6>A) CÔNG TY</h6>
+                    <h6>1. CÔNG TY</h6>
                     <ol>
                       <li>
                         - Tầm nhìn, sứ mệnh, giá trị cốt lõi, mục tiêu, chiến
@@ -289,7 +288,7 @@
                     </ol>
                   </li>
                   <li>
-                    <h6>B) BẢN THÂN</h6>
+                    <h6>2. BẢN THÂN</h6>
                     <ol>
                       <li>- Tính cách theo D.I.S.C</li>
                       <li>- Nhu cầu theo Maslow</li>
@@ -298,81 +297,50 @@
                     </ol>
                   </li>
                 </ol>
-                <h5>2.THIẾT LẬP MỤC TIÊU HÀNH ĐỘNG</h5>
+                <br>
+                <h5>II. THIẾT LẬP MỤC TIÊU HÀNH ĐỘNG</h5>
                 <ol>
-                  <li>- Lập mục tiêu SMART</li>
-                  <li>- Các tiêu chí và các lưu ý</li>
+                  <li>1. Lập mục tiêu SMART</li>
+                  <li>2. Các tiêu chí và các lưu ý</li>
                 </ol>
-                <h5>3. THIẾT LẬP TÍNH CÓ TỔ CHỨC</h5>
+                <br>
+                <h5>III. THIẾT LẬP TÍNH CÓ TỔ CHỨC</h5>
                 <ol>
-                  <li>- Lập danh sách công việc phải hoàn thành</li>
+                  <li>1. Lập danh sách công việc phải hoàn thành</li>
                   <li>
-                    - Phân loại công việc theo thứ tự ưu tiên quan trọng & khẩn
+                    2. Phân loại công việc theo thứ tự ưu tiên quan trọng &<br> &nbsp; &nbsp; khẩn
                     cấp
                   </li>
-                  <li>- Lập kế hoạch thực hiện</li>
-                  <li>- Ưu tiên cho sự hợp lý và tập trung thực hiện</li>
-                  <li>- Sắp xếp thứ tự ưu tiên</li>
-                  <li>- Loại bỏ sự không hợp lý để tập trung</li>
+                  <li>3. Lập kế hoạch thực hiện</li>
+                  <li>4. Ưu tiên cho sự hợp lý và tập trung thực hiện</li>
+                  <li>5. Sắp xếp thứ tự ưu tiên</li>
+                  <li>6. Loại bỏ sự không hợp lý để tập trung</li>
                   <li>
-                    - Lập kế hoạch làm việc tháng, tuần, ngày (to-do-list)
+                    7. Lập kế hoạch làm việc tháng, tuần, ngày (to-do-list)
                   </li>
-                  <li>- Theo dõi tiến độ và đánh giá nghiêm túc</li>
+                  <li>8. Theo dõi tiến độ và đánh giá nghiêm túc</li>
                 </ol>
-                <h5>4. LOẠI BỎ KẺ CẮP THỜI GIAN</h5>
+                <br>
+                <h5>IV. LOẠI BỎ KẺ CẮP THỜI GIAN</h5>
                 <ol>
-                  <li>- Sự sa đà, xao nhãng, lãng phí</li>
+                  <li>1. Sự sa đà, xao nhãng, lãng phí</li>
                   <li>
-                    - Tăng kiểm soát: PDCA; Làm chủ bản thân; Giao tiếp và phối
+                    2. Tăng kiểm soát: PDCA; Làm chủ bản thân; Giao tiếp và<br> &nbsp; &nbsp; phối
                     hợp làm việc hiệu quả thông qua cửa sổ Johari, 5S
                   </li>
                 </ol>
-                <h5>5. CHỐNG CHẦN CHỪ, TRÌ HOÃN</h5>
+                <br>
+                <h5>V. CHỐNG CHẦN CHỪ, TRÌ HOÃN</h5>
                 <ol>
-                  <li>- Khắc phục 1: Nguyên tắc 4D</li>
-                  <li>- Khắc phục 2: Nguyên tắc THỎA HIỆP hợp lý</li>
-                  <li>- Khắc phục 3: Tập ghi nhật ký “sợ”</li>
-                  <li>- Khắc phục 4: Tận hưởng thành công</li>
-                  <li>- Khắc phục 5: Trau dồi tri thức</li>
-                  <li>- Khắc phục 6: Rèn luyện sức khỏe</li>
+                  <li>1. Khắc phục 1: Nguyên tắc 4D</li>
+                  <li>2. Khắc phục 2: Nguyên tắc THỎA HIỆP hợp lý</li>
+                  <li>3. Khắc phục 3: Tập ghi nhật ký “sợ”</li>
+                  <li>4. Khắc phục 4: Tận hưởng thành công</li>
+                  <li>5. Khắc phục 5: Trau dồi tri thức</li>
+                  <li>6. Khắc phục 6: Rèn luyện sức khỏe</li>
                 </ol>
               </div>
 
-              <div class="history-info">
-                <h4 class="title">
-                  <span>Phần 3: </span>Các kỹ năng cần thiết để làm việc nhóm
-                  hiệu quả
-                </h4>
-
-                <ol>
-                  <li>
-                    <h5>3.1 Nhiệm vụ của mỗi thành viên trong nhóm</h5>
-                    <ol>
-                      <li>1. Tin tưởng</li>
-                      <li>2. Hòa đồng</li>
-                      <li>3. Giao tiếp</li>
-                      <li>4. Chủ động</li>
-                      <li>5. Lắng nghe cấp độ 5</li>
-                      <li>6. 6 nguyên tắc cần nhớ</li>
-                    </ol>
-                  </li>
-                  <li>
-                    <h5>3.2 Kỹ năng cần có của người leader</h5>
-                    <ol>
-                      <li>1. Sự khác nhau cơ bản giữa lãnh đạo và quản lý</li>
-                      <li>
-                        2. Tinh thần Omotenashi (quan tâm, đồng cảm, hành động
-                        trước và nhanh, thái độ ngôn từ trân trọng)
-                      </li>
-                      <li>3. Giữ vững mục tiêu và đưa ra định hướng</li>
-                      <li>4. Tạo và giữ “lửa”, luôn động viên nhân viên</li>
-                      <li>5. Luôn thử thách và đổi mới</li>
-                      <li>6. Luôn làm gương</li>
-                      <li>7. Phân công công việc rõ ràng. Đôn đốc nhắc nhở</li>
-                    </ol>
-                  </li>
-                </ol>
-              </div>
             </div>
           </div>
         </div>
