--- a/teamworkLeadership.html
+++ b/teamworkLeadership.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <title>Teamwork Leadership - Omotenashi</title>
+    <title>Teamwork - Omotenashi</title>
     <!-- ===================== META ===================== -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -117,13 +117,13 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Kĩ năng làm việc nhóm</h2>
+        <h2 class="title-line-left text-white">Tinh thần làm việc nhóm và lãnh đạo</h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">Teamwork Leadership</li>
+            <li class="text-blue">Tinh thần làm việc nhóm và lãnh đạo</li>
           </ul>
         </div>
       </div>
@@ -141,29 +141,21 @@
               </h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
-                <p>2 ngày</p>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
-                <!-- <span>Mục đích nhằm giúp học viên:</span>
+                <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Nắm bắt chu trình phát triển năng lực quản trị</li>
+                  <li>1. Thấu hiểu tầm quan trọng của team - work & leadership 
                   <li>
-                    2. Phân biệt giữa lãnh đạo và quản trị
+                    2. Nắm vững các phương pháp thành lập nhóm
                   </li>
                   <li>
-                    3. Hiểu rõ chân dung nhà quản trị chuyên nghiệp
+                    3. Phát huy tinh thần leadership & team-work, hướng đến<br> &nbsp; &nbsp; mục tiêu chung</li>
                   </li>
-
-                  <li>
-                    4. Nhận thức vai trò và chức năng
-                    của người quản trị
-                  </li>
-                  <li>5. Xây dựng khả năng tương tác với các cấp quản trị, các phòng ban khác hiệu quả hơn </li>
-
-
-                </ol> -->
+                </ol>
               </div>
 
               <div class="overview-info-item">
@@ -171,8 +163,8 @@
                 <ol>
                   <li>1. Cấp Quản lý</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, kiến
-                    thức về tinh thần làm việc nhóm, và năng lực lãnh đạo, dẫn
+                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng,<br> &nbsp; &nbsp; kiến
+                    thức về tinh thần làm việc nhóm, và năng lực<br> &nbsp; &nbsp; lãnh đạo, dẫn
                     dắt đội nhóm hoàn thành mục tiêu
                   </li>
                 </ol>
@@ -180,8 +172,7 @@
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -256,8 +247,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần 1: </span> Định nghĩa và tầm quan trọng
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần I: </span> Định nghĩa và tầm quan trọng
                 </h4>
                 <ol>
                   <li>1. Định nghĩa</li>
@@ -266,24 +257,24 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần 2:</span>Để phát huy tinh thần teamwork
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần II:</span> Để phát huy tinh thần team-work
                 </h4>
 
                 <ol>
                   <li>Bước 1: Xây dựng nguyên tắc khi thành lập nhóm</li>
                   <li>
-                    Bước 2: Phát huy vai trò của người leader khi xảy ra mâu
+                    Bước 2: Phát huy vai trò của người Leader khi xảy ra mâu
                     thuẫn trong nhóm
                   </li>
                   <li>Bước 3: Hình thành chuẩn mực</li>
-                  <li>Bước 4: Gìn giữ và phát huy vai trò người lãnh đạo</li>
+                  <li>Bước 4: Gìn giữ và phát huy leadership</li>
                 </ol>
               </div>
 
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần 3: </span>Các kỹ năng cần thiết để làm việc nhóm
+                <h4 class="title text-blue">
+                  <span class="text-blue">Phần III: </span>Các kỹ năng cần thiết để làm việc nhóm
                   hiệu quả
                 </h4>
 
@@ -300,8 +291,9 @@
                       <li>6. 6 nguyên tắc cần nhớ</li>
                     </ol>
                   </li>
+                  <br>
                   <li>
-                    <h5>3.2 Kỹ năng cần có của người leader</h5>
+                    <h5>3.2 Kỹ năng cần có của người Leader</h5>
                     <ol>
                       <li>1. Sự khác nhau cơ bản giữa lãnh đạo và quản lý</li>
                       <li>
